Issue number: QUARTZ-390 General cleanup including returning null when a String is empty, and trimming values when getting a property group